docs/0.6/_sources/api/gammapy.data.PointingInfo.rst.txt


PointingInfo
=========================

.. currentmodule:: gammapy.data

.. autoclass:: PointingInfo
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~PointingInfo.altaz
      ~PointingInfo.altaz_frame
      ~PointingInfo.duration
      ~PointingInfo.location
      ~PointingInfo.radec
      ~PointingInfo.time
      ~PointingInfo.time_ref

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PointingInfo.read

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: duration
   .. autoattribute:: location
   .. autoattribute:: radec
   .. autoattribute:: time
   .. autoattribute:: time_ref

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: read

   
   