docs/2.1rc1/_sources/api/gammapy.data.PointingInfo.rst.txt
PointingInfo
============

.. currentmodule:: gammapy.data

.. autoclass:: PointingInfo
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PointingInfo.altaz
      ~PointingInfo.altaz_frame
      ~PointingInfo.altaz_from_table
      ~PointingInfo.duration
      ~PointingInfo.location
      ~PointingInfo.radec
      ~PointingInfo.time
      ~PointingInfo.time_ref

   .. rubric:: Methods Summary

   .. autosummary::

      ~PointingInfo.altaz_interpolate
      ~PointingInfo.get_altaz
      ~PointingInfo.get_icrs
      ~PointingInfo.read

   .. rubric:: Attributes Documentation

   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: altaz_from_table
   .. autoattribute:: duration
   .. autoattribute:: location
   .. autoattribute:: radec
   .. autoattribute:: time
   .. autoattribute:: time_ref

   .. rubric:: Methods Documentation

   .. automethod:: altaz_interpolate
   .. automethod:: get_altaz
   .. automethod:: get_icrs
   .. automethod:: read
